Restructure validation output as records